facet-json-schema/src/snapshots/facet_json_schema__tests__enum_rename_all_snake_case.snap
---
source: facet-json-schema/src/lib.rs
assertion_line: 619
expression: schema
---
{
  "type": "string",
  "enum": [
    "circular_dependency",
    "invalid_naming",
    "unknown_requirement"
  ],
  "title": "ValidationErrorCode"
}
