facet-json-schema/src/snapshots/facet_json_schema__tests__enum_with_data_rename_all.snap
---
source: facet-json-schema/src/lib.rs
assertion_line: 648
expression: schema
---
{
  "oneOf": [
    {
      "type": "object",
      "properties": {
        "text_message": {
          "type": "object",
          "properties": {
            "content": {
              "type": "string"
            }
          },
          "required": [
            "content"
          ],
          "additionalProperties": false,
          "title": "Message"
        }
      },
      "required": [
        "text_message"
      ],
      "additionalProperties": false
    },
    {
      "type": "object",
      "properties": {
        "image_upload": {
          "type": "object",
          "properties": {
            "url": {
              "type": "string"
            },
            "width": {
              "type": "integer",
              "minimum": "0",
              "maximum": "4294967295"
            }
          },
          "required": [
            "url",
            "width"
          ],
          "additionalProperties": false,
          "title": "Message"
        }
      },
      "required": [
        "image_upload"
      ],
      "additionalProperties": false
    }
  ],
  "title": "Message"
}
