facet-json-schema/src/snapshots/facet_json_schema__tests__field_proxy_consulted_for_json_schema.snap
---
source: facet-json-schema/src/lib.rs
expression: schema
---
{
  "type": "object",
  "properties": {
    "custom_id": {
      "type": "string"
    }
  },
  "required": [
    "custom_id"
  ],
  "additionalProperties": false,
  "title": "Record"
}
