facet-json-schema/src/snapshots/facet_json_schema__tests__optional_field.snap
---
source: facet-json-schema/src/lib.rs
expression: schema
---
{
  "$schema": null,
  "$ref": null,
  "$defs": null,
  "type": "object",
  "properties": {
    "optional": {
      "$schema": null,
      "$ref": null,
      "$defs": null,
      "type": "string",
      "properties": null,
      "required": null,
      "additionalProperties": null,
      "items": null,
      "enum": null,
      "minimum": null,
      "maximum": null,
      "oneOf": null,
      "anyOf": null,
      "allOf": null,
      "description": null,
      "title": null,
      "const": null
    },
    "required": {
      "$schema": null,
      "$ref": null,
      "$defs": null,
      "type": "string",
      "properties": null,
      "required": null,
      "additionalProperties": null,
      "items": null,
      "enum": null,
      "minimum": null,
      "maximum": null,
      "oneOf": null,
      "anyOf": null,
      "allOf": null,
      "description": null,
      "title": null,
      "const": null
    }
  },
  "required": [
    "required"
  ],
  "additionalProperties": false,
  "items": null,
  "enum": null,
  "minimum": null,
  "maximum": null,
  "oneOf": null,
  "anyOf": null,
  "allOf": null,
  "description": null,
  "title": "Config",
  "const": null
}
