facet-json-schema/src/snapshots/facet_json_schema__tests__simple_enum.snap
---
source: facet-json-schema/src/lib.rs
expression: schema
---
{
  "$schema": null,
  "$ref": null,
  "$defs": null,
  "type": "string",
  "properties": null,
  "required": null,
  "additionalProperties": null,
  "items": null,
  "enum": [
    "Active",
    "Inactive",
    "Pending"
  ],
  "minimum": null,
  "maximum": null,
  "oneOf": null,
  "anyOf": null,
  "allOf": null,
  "description": null,
  "title": "Status",
  "const": null
}
