facet-json-schema/src/snapshots/facet_json_schema__tests__simple_struct.snap
---
source: facet-json-schema/src/lib.rs
expression: schema
---
{
  "$schema": null,
  "$ref": null,
  "$defs": null,
  "type": "object",
  "properties": {
    "age": {
      "$schema": null,
      "$ref": null,
      "$defs": null,
      "type": "integer",
      "properties": null,
      "required": null,
      "additionalProperties": null,
      "items": null,
      "enum": null,
      "minimum": "0",
      "maximum": "4294967295",
      "oneOf": null,
      "anyOf": null,
      "allOf": null,
      "description": null,
      "title": null,
      "const": null
    },
    "name": {
      "$schema": null,
      "$ref": null,
      "$defs": null,
      "type": "string",
      "properties": null,
      "required": null,
      "additionalProperties": null,
      "items": null,
      "enum": null,
      "minimum": null,
      "maximum": null,
      "oneOf": null,
      "anyOf": null,
      "allOf": null,
      "description": null,
      "title": null,
      "const": null
    }
  },
  "required": [
    "name",
    "age"
  ],
  "additionalProperties": false,
  "items": null,
  "enum": null,
  "minimum": null,
  "maximum": null,
  "oneOf": null,
  "anyOf": null,
  "allOf": null,
  "description": null,
  "title": "User",
  "const": null
}
