facet-json-schema/src/snapshots/facet_json_schema__tests__vec.snap
---
source: facet-json-schema/src/lib.rs
assertion_line: 604
expression: schema
---
{
  "type": "object",
  "properties": {
    "items": {
      "type": "array",
      "items": {
        "type": "string"
      }
    }
  },
  "required": [
    "items"
  ],
  "additionalProperties": false,
  "title": "Data"
}
